# vc-pipeline-emotion-detection

./: README.md  main.py  params.yaml  pyproject.toml  setup.py
.dvc/: config
docs/: conf.py
